* Versão : 1.0.19
* Novidades
  - Menu lateral
    . texto explicativo sobre o modo camuflado
    . ação de visualizar o tutorial
    . revisar o tutorial de modo camuflado