@@ -4,3 +4,4 @@
     . texto explicativo sobre o modo camuflado
     . ação de visualizar o tutorial
     . revisar o tutorial de modo camuflado
+    . fluxo direcionando para o "Sobre o PenhaS"
